[tool.poetry]
name = "fastapihealthcheckexample"
version = "0.1.0"
description = ""
authors = ["socar-rudy <rudy@socar.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
